# always

./: .gitattributes  .gitignore  README.md  README.txt
core/: README.txt
core/Client/: Client.sln  README.txt
core/Client/Client.Core/: AgentFaceExpression.cs  AgentTurn.cs  Brightness.cs  Client.Core.csproj  IAgentControl.cs  LogUtils.cs
core/Client/Client.Startup/: App.xaml  App.xaml.cs  Client.Startup.csproj  packages.config
core/FaceDetection/: ContentToText.cpp  CreateFaceEngine.cpp  FaceDetection.cpp  FaceDetection.sln  Happy_26x26_2008_09_08_124526.cpp  OCVvideoCapture.vcxproj  OCVvideoCapture.vcxproj.filters  README.txt
core/Reeti/: CMakeLists.txt  README.txt  ReetiGitHubInstruction.txt  reetiServerCapturing.sh
core/Reeti/src/: CMakeLists.txt
core/Reeti/src/functions/: FaceTracking.u  Mirroring.u  functions.u
core/Reeti/src/modules/: bignod.cpp  delay.cpp  happy.cpp  lookaway.cpp  sad.cpp  smallnod.cpp  talk.cpp
core/Reeti/src/modules/include/: bignod.h  delay.h  sad.h
core/Reeti/src/servers/: ReetiServer_Capturing.cpp  ReetiServer_FaceTracking.cpp  ReetiServer_Mirroring.cpp
core/Reeti/src/servers/include/: ReetiServer_Capturing.hpp  ReetiServer_FaceTracking.hpp
core/WinAgent/: SpaceKey.cs  WinAgent.sln
core/agent/: .classpath  .gitignore  .project  README.txt  release.xml
core/discoRT/: .classpath  .gitignore  .project  README.txt
core/sgf/: .classpath  .project
docs/: Asus setup.txt  MyJavaConventions.importorder  MyJavaConventions.xml  README.txt  RagAgentActions.txt  SHORE-Instruction.txt  ShoreHappiness.txt  TODO-13-10-01.xlsx  TODO-Oct-10.xlsx  TODO-Oct-16.xlsx  asusSetup.txt  ivona.txt  log-format.txt  machines.txt  may13.txt  participant-instructions.txt  pseudocodeRelationshipPlanner.txt  setup-asus.txt  setup-development.txt  setup.txt
docs/reeti/: Hardware.txt  Issues.txt  Notes.txt
plugins/: Plugins.sln  README.txt
plugins/Plugins.Startup/: App.xaml  App.xaml.cs  Plugins.Startup.csproj
plugins/TicTacToe.UI/: GameShape.xaml  GameShape.xaml.cs  TicTacToePlugin.cs
plugins/WpfApplication1/: WpfApplication1.csproj
plugins/calendar/: .classpath
plugins/calendar-plugin/: Calendar.sln  README.txt
plugins/rummy-plugin/: README.txt  Rummy.sln
plugins/scriptbuilder-plugin/: .classpath  .project
plugins/story-plugin/: README.txt  Story.sln
plugins/weather-plugin/: README.txt
user/: .gitignore  Acquaintance.d4g.xml  Acquaintance.xml  Activities.properties  Activities.xml  Companion.d4g.xml  Companion.xml  Fili.json  Init.properties  Init.xml  Plugins.properties  Plugins.xml  README.txt  Reeti.json  ShoreHappinessInstructions.txt  Stranger.d4g.xml  Stranger.xml  TestUser.owl  User.Diane.owl  User.owl  schemas.xml
user/weatherData/: 04_26_2012.json  07_25_2013.json  10_24_2013.json  README.txt  testing.json
(+1621 files in other folders)
